# Nux-pulse

./: .env.example  .env.production.example  .gitignore  DEPLOY.md  MCP.md  NEXT_STEPS.md  PLANEJAMENTO.md  PLANO_COMMAND_CENTER.md  README.md  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml  railway.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260419_0001_initial_schema.py  20260419_0002_add_timezone_to_connection.py  20260421_0003_project_module.py  20260421_0004_manual_conversions.py  20260421_0004_task_platform_type.py  20260421_0005_manual_conversions.py  20260423_0006_widen_breakdown_columns.py  20260427_0007_niches_and_clients_score.py  20260427_0008_scoring_engine.py  20260427_0009_niche_benchmarks.py  20260427_0010_alerts_portfolio.py  20260427_0011_seed_service_categories.py  20260427_0012_seed_niche_benchmarks.py  20260427_0013_trackcore_integration.py
apps/api/app/: main.py  mcp_server.py
apps/api/app/core/: auth.py  config.py  crypto.py  db.py  supabase.py
apps/api/app/models/: base.py  client.py  connection.py  conversions.py  google.py  meta.py  niche.py  ops.py  project.py  scoring.py  taxonomy.py  unified.py
apps/api/app/routers/: clients.py  conversions.py  health.py  insights.py  integrations.py  niches.py  portfolio.py  project.py  sync.py
apps/api/app/schemas/: client.py  connection.py  conversions.py  niche.py  project.py
apps/api/app/services/google/: __init__.py  client.py
apps/api/app/services/meta/: __init__.py  client.py  ingest.py
apps/api/scripts/: backfill.py  seed.py  start.sh
(+79 files in other folders)
