[project]
name = "nux-pulse-api"
version = "0.1.0"
description = "NUX Pulse — Marketing analytics API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118",
    "python-multipart>=0.0.18",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.28",
    "redis>=5.2",
    "celery>=5.4",
    "cryptography>=44.0",
    "facebook-business>=22.0",
    "google-ads>=25.1",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8", "pytest>=8.3", "pytest-asyncio>=0.24"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
